--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 .home{
     width: 100%;
+    /* height: 100vh; */
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -96,6 +97,11 @@ input{
     }
 }
 
+@media all and (max-width: 766px){
+    .assistance{
+        flex-wrap: wrap;
+    }
+}
 @media all and (max-width: 606px){
     .footer_right{
        display: none; 
@@ -131,6 +137,7 @@ input{
 }
 
 @media all and (max-width: 320px){
+
 
     .our_contacts{
          width: 272px !important; 
